[package]
name = "game_interface"
version = "1.0.0"
authors = ["Arthur Efimow <efimow@web.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
    xml-rs = "0.8"
    serde_derive = "1.0"
    serde = "1.0"
    serde-xml-rs = "0.3.1"
    stb_image = "0.2.2"
    serde_json = "1.0.49"
    rand = "0.7.3"
    sdl2 = "*"

[dependencies.gl]
    git = "https://github.com/bjz/gl-rs"
    
[lib]
    name = "game_interface"           
    path = "src/lib.rs"
